fix(image-card): do not truncate promotional title
on-behalf-of: @ithaka <robert.niznik@ithaka.org>

--- a/packages/pharos/src/components/image-card/pharos-image-card.scss
+++ b/packages/pharos/src/components/image-card/pharos-image-card.scss
@@ -106,9 +106,11 @@
   margin-bottom: var(--pharos-spacing-one-half-x);
 }
 
-.card__heading,
-.card__title--hover {
-  @include mixins.truncate-text($lines: 2);
+:host(:not([variant='promotional'])) {
+  .card__heading,
+  .card__title--hover {
+    @include mixins.truncate-text($lines: 2);
+  }
 }
 
 .card__svg {
